--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -2,12 +2,19 @@
   box-sizing: border-box;
 }
 
+body,
 html {
-  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  max-height: 100%;
 }
 
 body {
   margin: 0;
+  min-height: 100vh;
 }
 
 .md-background--secondary {
